--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "chart.js": "^3.9.1",
     "ngx-scrollbar": "^12.0.0",
     "rxjs": "~7.8.1",
+    "socket.io-client": "^4.6.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
   },
