--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
     "@types/socket.io": "^3.0.2",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.1",
     "socket.io": "^4.6.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.3"
