--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@coreui/utils": "^2.0.2",
     "chart.js": "^3.9.1",
     "ngx-scrollbar": "^12.0.0",
+    "primeng": "^16.0.2",
     "rxjs": "~7.8.1",
     "socket.io-client": "^4.6.2",
     "tslib": "^2.3.0",
