--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~4.5.2",
     "@coreui/utils": "^2.0.2",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "angular2-uuid": "^1.1.1",
     "chart.js": "^3.9.1",
     "ngx-scrollbar": "^12.0.0",
